Packet.net folks tested a FreeBSD/arm64 image and found that IPv6 is broken. Issue 1: Multicast ARM64TODO Report: > in6_ifattach: vnic0 is not multicast capable, IPv6 not enabled https://svnweb.freebsd.org/base/head/sys/dev/vnic/nicvf_main.c?view=markup#l498 Issue 2: IPv6 ARM64TODO https://svnweb.freebsd.org/base/head/sys/dev/vnic/nicvf_queues.c?revision=325683&view=markup#l1780
A commit references this bug: Author: bz Date: Tue Nov 14 16:47:06 UTC 2017 New revision: 325813 URL: https://svnweb.freebsd.org/changeset/base/325813 Log: Unbreak IPv6. No longer return ENXIO when trying to send an IPv6 packet in nicvf_sq_add_hdr_subdesc(). Restructure the code so that the upper layer protocol parts are agnostic of the L3 protocol (and no longer specific to IPv4). With this basic IPv6 packets go through. We are still seeing weird behaviour which needs further diagnosis. PR: 223669 In collaboration with: emaste MFC after: 3 days Changes: head/sys/dev/vnic/nicvf_queues.c
A commit references this bug: Author: emaste Date: Tue Nov 21 15:34:26 UTC 2017 New revision: 326062 URL: https://svnweb.freebsd.org/changeset/base/326062 Log: MFC r325813 (bz): Unbreak IPv6. No longer return ENXIO when trying to send an IPv6 packet in nicvf_sq_add_hdr_subdesc(). Restructure the code so that the upper layer protocol parts are agnostic of the L3 protocol (and no longer specific to IPv4). With this basic IPv6 packets go through. We are still seeing weird behaviour which needs further diagnosis. PR: 223669 Changes: _U stable/11/ stable/11/sys/dev/vnic/nicvf_queues.c